correccion sidebar y contenido

--- a/sistema-ventas/src/styles/styles.css
+++ b/sistema-ventas/src/styles/styles.css
@@ -21,7 +21,7 @@ ul{
 }
 
 .containerMain{
-    display: flex;
+    
     flex-direction: column;
     overflow: hidden;
 }
@@ -37,9 +37,10 @@ ul{
 .navbar > li{
     display: flex;
     align-items: flex-start;
+    
 }
 
 .containerMain > main{
-    height: 100%;
+    height: 100vh;
     overflow-y: scroll;
 }
