--- a/sistema-ventas/src/styles/stylesb.css
+++ b/sistema-ventas/src/styles/stylesb.css
@@ -1,7 +1,7 @@
 .sidebar{
     min-width: 30vh; 
     max-width: 30vh;
-    min-height: 90vh;
+    min-height: 100%;
     color: white;
     padding: 0px;
     background-color: rgb(15, 27, 80);
@@ -42,4 +42,8 @@ ul{
 .boton{
     color: red;
     size: 25;
+}
+
+span{
+    font-weight: 700;
 }
