--- a/sistema-ventas/src/styles/styles.css
+++ b/sistema-ventas/src/styles/styles.css
@@ -51,11 +51,12 @@ ul{
     margin-bottom: 1%;
 }
 
-.Login{
+.llogin{
  
 
     text-align: center;
     height: 100vh;
     display: list-item;
     margin-top: 30vh;
+    
 }
