--- a/sistema-ventas/src/styles/stylesc2.css
+++ b/sistema-ventas/src/styles/stylesc2.css
@@ -1,4 +1,4 @@
-.tablaAzul {     
+.tabla2 {     
     font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     font-size: 16px;    
     margin: 25px 45px 45px 65px;     
@@ -7,25 +7,15 @@
     border-collapse: collapse;
 }
 
-.tablath {     
-    font-size: 16px;     
-    font-weight: bold;     
-    padding: 8px;     
-    background: #006699;
-    color: #FFFFFF;
-}
-
-.tablatd {    
+.tablatd2 {    
     padding: 8px; 
     font-weight: bold;      
     background: #FFFFFF;     
     border-bottom: 1px solid #c2c8e0;   
-    border-top: 1px solid transparent;
+    border-top: 1px solid #c2c8e0;
     border-left: 1px solid #c2c8e0; 
     border-right: 1px solid #c2c8e0;
 }
-
-tr:hover .tablatd  { background: rgb(236,236,236) }
 
 .tablaSelect{
 
@@ -43,10 +33,54 @@ tr:hover .tablatd  { background: rgb(236,236,236) }
 .tablaH3{
     margin-top: 50px;
 }
-.spanAncho{
-    font-weight: 700;
+
+.centro2{
+    text-align: center;
 }
 
-.centro{
-    text-align: center;
+.overlay { 
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  .overlay:target{
+    visibility: visible;
+    opacity: 1;
+  }
+
+  #popupBody{
+    width: 46%;
+    padding: 2%;
+    background: #FFF;
+    position: relative;
+    margin: 20% auto;
+    transition: all 5s ease-in-out;
+}
+
+#cerrar2{
+    position:static;
+    top: 20px;
+    right: 30px;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #F00;
+    transition: all 200ms;
+}
+
+.aModificada{
+    outline: none;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+.aModificada:hover{
+    color: #FFFFFF;
 }
