--- a/sistema-ventas/src/styles/stylesc2.css
+++ b/sistema-ventas/src/styles/stylesc2.css
@@ -1,12 +1,21 @@
+.color{
+    height: 100vh;
+    background-color: rgb(202, 222, 241);
+    padding: 50px;
+}
+.colums{
+    display: flex;
+    flex-direction: column;
+}
 .tabla2 {     
+    align-items: center;
     font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     font-size: 16px;    
-    margin: 25px 45px 45px 65px;     
-    width: 90%; 
+    margin: auto;
+    width: 50%; 
     text-align: left;    
     border-collapse: collapse;
 }
-
 .tablatd2 {    
     padding: 8px; 
     font-weight: bold;      
@@ -16,10 +25,11 @@
     border-left: 1px solid #c2c8e0; 
     border-right: 1px solid #c2c8e0;
 }
-
 .tablaSelect{
-
-    font-size: 1rem;
+    width: 225px;
+    height: 40px;
+    margin: auto;
+    font-size: 20px;
     font-weight: bold;
     line-height: 1.5;
     background-color: #fff;
@@ -27,17 +37,17 @@
     background-position: right .75rem center;
     background-size: 16px 12px;
     border: 1px solid #ced4da;
-    border-radius: .25rem;
+    border-radius: .35rem;
 }
-
 .tablaH3{
-    margin-top: 50px;
+    font-size: 40px;
 }
-
+.h1{
+    margin-bottom: 55px;
+}
 .centro2{
     text-align: center;
 }
-
 .overlay { 
     position: fixed;
     top: 0;
@@ -48,14 +58,12 @@
     transition: opacity 500ms;
     visibility: hidden;
     opacity: 0;
-  }
-
-  .overlay:target{
+}
+.overlay:target{
     visibility: visible;
     opacity: 1;
-  }
-
-  #popupBody{
+}
+#popupBody{
     width: 46%;
     padding: 2%;
     background: #FFF;
@@ -63,7 +71,6 @@
     margin: 20% auto;
     transition: all 5s ease-in-out;
 }
-
 #cerrar2{
     position:static;
     top: 20px;
@@ -74,13 +81,20 @@
     color: #F00;
     transition: all 200ms;
 }
-
 .aModificada{
     outline: none;
     color: #FFFFFF;
+    font-size: 18px;
     text-decoration: none;
 }
-
 .aModificada:hover{
     color: #FFFFFF;
+}
+.label{
+    margin-bottom:0.5rem;
+    margin-top: 1rem;
+    font-size: 22px;
+}
+.separate{
+    margin-top: 2rem;
 }
